apps/base/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: node_test
  labels:
    name: web
    app: node_test
spec:
  replicas: 3
  selector:
    matchLabels:
      name: web
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
        - name: web
          image: frozenf/node_test:1.0
          ports:
            - containerPort: 8081
