apps/base/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: node_test
  labels:
    name: web
    app: node_test
spec:
  selector:
    name: web
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 80
      protocol: TCP
