apps/base/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-test-ingress
  namespace: node-test
spec:
  ingressClassName: nginx
  rules:
    - host: node-test.local
      http:
         paths:
           - pathType: Prefix
             path: "/"
             backend:
               service:
                 name: web
                 port:
                   number: 80
